re-parse-proc-macro/src/snapshots/re_parse_proc_macro__tests__macro_errors.snap
---
source: re-parse-proc-macro/src/lib.rs
expression: "dbg_re_parse!(\"A-\", \"A\")"
snapshot_kind: text
---
fn main() {
    ::core::compile_error! {
        "Expected end of input, got '-'"
    }
}
